fixed spacing

--- a/src/components/layout/homepage.style.css
+++ b/src/components/layout/homepage.style.css
@@ -35,6 +35,9 @@ h2 {
   padding-bottom: 30px;
 }
 
+.infotext {
+  color: #1f6ea9;
+}
 .ikonica {
   font-size: 50px;
   padding: 20px;
@@ -46,17 +49,17 @@ h2 {
   font-weight: bold;
   padding: 30px 0;
 }
-hr.star-primary {
+/* hr.star-primary {
   margin: 25px auto 30px;
-  padding: 0 0 30px 0; /* samo bottom ima padding */
+  padding: 0 0 30px 0; 
   max-width: 250px;
   border: 0;
   border-top: solid 5px;
   text-align: center;
   border-color: #1f6ea9;
-}
+} */
 
-hr.star-primary:after {
+/* hr.star-primary:after {
   content: "\f006";
   position: relative;
   top: -0.8em;
@@ -65,7 +68,7 @@ hr.star-primary:after {
   font-size: 2em;
   color: #1f6ea9;
   background-color: #fff;
-}
+} */
 
 footer,
 #portfolio {
